--- a/pp-02/screen.css
+++ b/pp-02/screen.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap');
-
+@import url('//basehold.it/25');
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -9,13 +9,20 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 /* stylelint-enable */
 html{
   font-family: 'Playfair Display', serif;
-  font-size: 18px;
-
+  font-size: 20px;
+  line-height: 25px;
+  padding: 25px 12.5px 12.5px 12.5px;
 }
 h2{
+  padding-bottom: 25px;
   font-weight: bold;
 }
 h3{
   font-style: italic;
+}
+
+
+ul{
+  padding-bottom: 25px;
 }
 /* Begin site styles below */
